@@ -1,5 +1,6 @@
-rm -f *.class
-javac CountDown.java
+cd ${CYBER_DOJO_SANDBOX}
+
+javac --enable-preview --release 14 CountDown.java 2>&1
 if [ $? != 0 ]; then
   echo
   echo ">>> Score = 0"
@@ -8,5 +9,5 @@ if [ $? != 0 ]; then
   exit
 fi
 
-javac Tokens.java Scorer.java
-java -cp . Scorer CountDown.java
+javac --enable-preview --release 14 Tokens.java Scorer.java
+java --enable-preview --class-path . Scorer CountDown.java
